# bert.webterminal

./: .gitignore  README.md  setup.cfg
btwebterminal/: app.py  webterminal.py
btwebterminal/spyder_terminal/server/: common.py  routes.py
btwebterminal/spyder_terminal/server/logic/: term_manager.py
btwebterminal/spyder_terminal/server/rest/: term_rest.py
btwebterminal/spyder_terminal/server/tests/: test_server.py
btwebterminal/spyder_terminal/server/websockets/: term_ws.py
