[check-manifest]
ignore =
    Dockerfile
    entrypoint.sh
    openssl.cnf
    
[metadata]
name = bertdotbillwebterminal
author = Engelbert Tejeda
author_email = berttejeda@gmail.com
description = Webterminal Component for Bert's Interactive Lesson Loader
version = file: VERSION.txt
url = https://github.com/berttejeda/bert.bill-webterminal
keywords =
  browser-based
  webterminal
  xtermjs
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
include_package_data = true
python_requires = >= 3.7
setup_requires =
  setuptools >= 40.6
  pip >= 10
  wheel >= 0.31
packages = find:
zip_safe: False
scripts =
#  somescript.py
install_requires =
  terminado>=0.12.0,<1.0.0
  coloredlogs


[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  bill-webterminal=bertdotbillwebterminal.app:main

[options.data_files]